solved paper img prob

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="images/rock.png">
          </div>
          <div class="box" id="Paper">
-           <img src="images/Paper.png">
+           <img src="images/paper.png">
       
          </div>
          <div class="box" id="Scissor">
